# ChangeLog for app-misc/navit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> navit-9999.ebuild:
  Live ebuilds dont have keywords.

  23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added local USE flag description wrt GLEP 56

  15 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  navit-9999.ebuild:
  Re-keyword navit as sunrise policy is different from gentoo-x86 policy

  14 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  navit-9999.ebuild:
  Drop keywords as per policy

  13 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  +navit-9999.ebuild, +metadata.xml:
  New ebuild for bug #176552
