@@ -1,3 +1,3 @@
-EBUILD navit-9999.ebuild 1309 RMD160 5d04e92fbb8171116600c483e013c0511cfeac3c SHA1 d721d835a916b55dfe4f8c1974c85211986cb498 SHA256 7d396e7b2caf2f9d7edbc4ef584ca08fd086ba4bbc5b10e8274dac524a5f67a7
-MISC ChangeLog 763 RMD160 0cc2310a6b749cf312f7ef6f5eef53f5d2a5be51 SHA1 c8776781cf1f8de123f959277295bea82f2751b3 SHA256 ada36fe983c2877121b9d8132b87af7b8264de88122b03c858deae41fa5c1322
+EBUILD navit-9999.ebuild 1361 RMD160 ca09a79836dcda844b2ea87887b16a2818b957ab SHA1 9db7b2faf3988ac3c22d89dc2c3eeb7602e9c8cc SHA256 4700b4cc076e16f3a6fe253c1bc57117083a728d4d3dab32105aeb691ff68025
+MISC ChangeLog 961 RMD160 0cf97e288c987ba95e51b6b59a58ca428823bbcf SHA1 a204d2a8dd80ad682b3eab071bb3c0d7b28d50d0 SHA256 961f2198de8a1d55b30c8c120709e4eaf9e258436ff62e058b22ede76073fb5c
 MISC metadata.xml 349 RMD160 221c11be5e047af67abb16d7158e0808a69d7a49 SHA1 f2f3f4ebf4d168e3f317cb83a6324ecb4473a6fe SHA256 1eb8ca1eda615a78d37a5ee02be18ad8ad8392ea7cf02ff7bc7147c73bd1d991
